# ats_score

./: .gitignore  README.md  job_sites.json  main.py  prompt.txt  pyproject.toml  requirements.txt
src/: ats_grading.py  job_scout.py
