[project]
name = "ats-score"
version = "0.1.0"
description = "Streamlit-based ATS resume scorer using an LLM prompt-driven workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.25",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "PyPDF2>=3.0",
    "python-docx>=0.9",
    "pypandoc>=1.8",
    "requests>=2.33",
    "lxml>=6.0",
    "pywin32>=306; platform_system == 'Windows'",
]
